cmake_minimum_required(VERSION 3.28)

project(TheCProgrammingLanguage C)

set(CMAKE_C_STANDARD 11)


#Chapter 01
add_subdirectory(chapter_01/ex_01_01)
add_subdirectory(chapter_01/ex_01_02)
add_subdirectory(chapter_01/ex_01_03)
add_subdirectory(chapter_01/ex_01_04)
add_subdirectory(chapter_01/ex_01_05)
add_subdirectory(chapter_01/ex_01_06)
add_subdirectory(chapter_01/ex_01_07)
add_subdirectory(chapter_01/ex_01_08)
add_subdirectory(chapter_01/ex_01_09)
add_subdirectory(chapter_01/ex_01_10)
